# handoff-now

./: .gitattributes  .gitignore  .gitleaks.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PLAN.md  README.md  SECURITY.md
.claude-plugin/: marketplace.json  plugin.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml  pages.yml  release.yml
agents/: handoff-writer.md
docs/: architecture.md  launch-kit.md  local-install-windows.md  plugin-directory-submission.md  recovery-scenarios.md  release.md  threat-model.md
hooks/: hooks.json
schemas/: config.schema.json  session.schema.json
scripts/: bootstrap.sh  hook-dispatch.sh  install.ps1  install.sh
site/: index.html  robots.txt  sitemap.xml  styles.css
skills/configure/: SKILL.md
skills/doctor/: SKILL.md
skills/now/: SKILL.md
skills/resume/: SKILL.md
skills/setup/: SKILL.md
skills/status/: SKILL.md
skills/uninstall/: SKILL.md
src/: artifacts.rs  config.rs  credentials.rs  engine.rs  lib.rs  main.rs  redact.rs  setup.rs  state.rs
tests/: hook_contract.rs
